adição de camadas para demonstrar a atuação máxima da área de fonte térmica e zonas de transição dos climas locais

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <body>
         <header id="header">
             <div class="authors">
-                <h1>Zonas de Clima Local Feira de Santana, Bahia, Brasil</h1>
+                <h1>Zonas de Clima Local de Feira de Santana, Bahia, Brasil</h1>
                 <div class="author" id="author-1">
                     Natanael Augusto Viana Simões
                     <address>
